<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/reg_brand"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="143dp"
        android:gravity="center"
        android:orientation="vertical">



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:theme="@style/EditTextHint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_placeholder_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:theme="@style/EditTextHint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_placeholder_pass"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:theme="@style/EditTextHint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_placeholder_pass_confirm"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reg_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/reg_btn_text"
        android:textAllCaps="false"
        android:textColor="?android:attr/colorLongPressedHighlight"
        android:textSize="16sp" />

    <Button
        android:id="@+id/reg_login_btn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/reg_login_text"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/reg_logo"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/reg_text"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/reg_logo"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:fontFamily="@font/open_sans"
        android:text="@string/reg_brand_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/reg_brand"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/reg_text"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:fontFamily="@font/open_sans"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="30sp" />

    <ProgressBar
        android:id="@+id/reg_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="invisible" />

</RelativeLayout>