<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="top|center"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/add_post_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"></android.support.v7.widget.Toolbar>

        <ProgressBar
            android:id="@+id/add_post_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="top|center"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/add_post_img"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/default_image" />

            <EditText
                android:id="@+id/add_post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/post_title_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/add_post_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:hint="@string/post_desc_hint"
                android:inputType="textMultiLine"
                android:maxLength="150" />

            <Button
                android:id="@+id/post_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/post_btn_text"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>